fixed text wrapping in code blocks

--- a/assets/opendaws/overrides.less
+++ b/assets/opendaws/overrides.less
@@ -13,7 +13,10 @@ h6 { color: #676B99 }
 p,table,div,ul,ol,dl,li,dt,dd,td,dialog,blockquote,pre,code,address,form label,form input,tspan { font-family: georgia, 'times new roman', times, serif; }
 
 pre, code { font-family: Courier, monospace; }
-pre code { margin-bottom: 0; }
+pre code {
+	margin-bottom: 0;
+	white-space: pre-wrap;
+}
 
 table {
 	font-size: 14px;
